@@ -2,11 +2,11 @@
 #include "graphicsport.h"
 #include "woopsi.h"
 
-Button::Button(s16 x, s16 y, u16 width, u16 height, const char* text, FontBase* font) : Textbox(x, y, width, height, text, font) {
+Button::Button(s16 x, s16 y, u16 width, u16 height, const char* text, FontBase* font) : TextBox(x, y, width, height, text, font) {
 	_outline = OUTLINE_CLICK_DEPENDENT;
 }
 
-Button::Button(s16 x, s16 y, u16 width, u16 height, char letter, FontBase* font) : Textbox(x, y, width, height, letter, font) {
+Button::Button(s16 x, s16 y, u16 width, u16 height, char letter, FontBase* font) : TextBox(x, y, width, height, letter, font) {
 	_outline = OUTLINE_CLICK_DEPENDENT;
 }
 
