@@ -1,7 +1,7 @@
 #include "contextmenuitem.h"
 #include "graphicsport.h"
 
-ContextMenuItem::ContextMenuItem(s16 x, s16 y, u16 width, u16 height, const char* text, u32 value, FontBase* font) : Textbox(x, y, width, height, text, font) {
+ContextMenuItem::ContextMenuItem(s16 x, s16 y, u16 width, u16 height, const char* text, u32 value, FontBase* font) : TextBox(x, y, width, height, text, font) {
 	setBorderless(true);
 	setTextPositionVert(TEXT_POSITION_VERT_CENTRE);
 	setTextPositionHoriz(TEXT_POSITION_HORIZ_LEFT);
