@@ -11,7 +11,7 @@ using namespace std;
  * Single-line textbox gadget.  Can align text both vertically and horizontally in
  * different ways.
  */
-class Textbox : public Gadget {
+class TextBox : public Gadget {
 public:
 
 	/**
@@ -41,7 +41,7 @@ public:
 	 * @param text Pointer to a string to display in the textbox.
 	 * @param font The font to use in this text box.
 	 */
-	Textbox(s16 x, s16 y, u16 width, u16 height, const char* text, FontBase* font = NULL);
+	TextBox(s16 x, s16 y, u16 width, u16 height, const char* text, FontBase* font = NULL);
 	
 	/**
 	 * Constructor for a textbox containing a single character.
@@ -52,7 +52,7 @@ public:
 	 * @param letter Single character to display in the textbox.
 	 * @param font The font to use in this text box.
 	 */
-	Textbox(s16 x, s16 y, u16 width, u16 height, const char letter, FontBase* font = NULL);
+	TextBox(s16 x, s16 y, u16 width, u16 height, const char letter, FontBase* font = NULL);
 	
 	/**
 	 * Draw the region of the textbox within the clipping rect. Should not be called
@@ -128,7 +128,7 @@ protected:
 	/**
 	 * Destructor.
 	 */
-	virtual inline ~Textbox() {
+	virtual inline ~TextBox() {
 		delete[] _text;
 		_text = NULL;
 	};
@@ -136,7 +136,7 @@ protected:
 	/**
 	 * Copy constructor is protected to prevent usage.
 	 */
-	inline Textbox(const Textbox& textbox) : Gadget(textbox) { };
+	inline TextBox(const TextBox& textbox) : Gadget(textbox) { };
 };
 
 #endif
